// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`styled attr 1`] = `
.css-H1-15vt02v-1n5h3v0 {
  font-size: 48;
  margin: 4rem;
}

<h1
  className="css-H1-15vt02v-1n5h3v0"
  fontSize={48}
/>
`;

exports[`styled basic render 1`] = `
.css-H1-13wdnau-xy96vj {
  font-size: 20px;
}

<h1
  className="css-H1-13wdnau-xy96vj"
>
  hello world
</h1>
`;

exports[`styled call expression 1`] = `
.css-H1-13wdnau-xy96vj {
  font-size: 20px;
}

<h1
  className="legacy__class css-H1-13wdnau-xy96vj"
>
  hello world
</h1>
`;

exports[`styled composition 1`] = `
.css-H1-13wdnau-xy96vj {
  font-size: 20px;
}

.css-H2-vxb7tq-1gn1gp5 {
  font-size: 13.333333333333334;
}

<h1
  className="legacy__class css-H2-vxb7tq-1gn1gp5 css-H1-13wdnau-xy96vj"
>
  hello world
</h1>
`;

exports[`styled fragments 1`] = `
.css-H2-idm3bz-361gww {
  font-size: 32px;
}

.css-H1-1qd8mfb-1mxqzi0 {
  font-size: 20px;
  height: 64px;
  color: blue;
}

<h1
  className="legacy__class css-H2-idm3bz-361gww css-H1-1qd8mfb-1mxqzi0"
  scale={2}
>
  hello world
</h1>
`;

exports[`styled function in expression 1`] = `
.css-H1-13wdnau-xy96vj {
  font-size: 20px;
}

.css-H2-vxb7tq-1wx98rf {
  font-size: 40;
}

<h1
  className="legacy__class css-H2-vxb7tq-1wx98rf css-H1-13wdnau-xy96vj"
  scale={2}
>
  hello world
</h1>
`;

exports[`styled higher order component 1`] = `
.css-onyx-wn422p-gyln3i {
  name: onyx;
  background-color: '#343a40';
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  flex-direction: column;
  name: squirtle-blue-bg;
  background-color: #7FC8D6;
}

.css-Content-13wdnau-1z6hk6 {
  font-size: 20px;
}

<div
  className="css-onyx-wn422p-gyln3i css-Content-13wdnau-1z6hk6"
/>
`;

exports[`styled name 1`] = `
.css-FancyH1-1azfbv1-qrqyj0 {
  name: FancyH1;
  font-size: 20px;
}

<h1
  className="css-FancyH1-1azfbv1-qrqyj0"
>
  hello world
</h1>
`;

exports[`styled no dynamic 1`] = `
.css-H1-dae0kw-kdrkuq {
  font-size: 12px;
}

<h1
  className="css-H1-dae0kw-kdrkuq"
>
  hello world
</h1>
`;
